--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -1,11 +1,103 @@
 main{
     display: flex;
     flex-direction: column;
+    align-items: center;
+}
+section.product-list{
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin: 0;
+    padding: 0 1rem;
+}
+
+section .belluser{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 5px 0;
+    border-bottom: 1px solid var(--color-azulClaro);
+}
+.display-shop{
+    background-color: var(--color-violeta);
+    border-radius: 2.3rem;
+    font-size: 1rem;
+    font-weight: bold;
+    border: none;
+    box-shadow:var(--box-shadow-button);
+    color: var(--color-azulOscuro);
+    padding: 5px 1px;
+    width: 10rem;
+    text-align: center;
+}
+section .belluser a{
+    margin: 0 0.5rem;
+}
+section .belluser a i{
+    font-size: 1.4rem;
+}
+section .search-table{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 6px 4px;
+    font-size: 1rem;
+    margin: 2px 0;
+}
+.search-table h2{
+    margin-left: 1%;
+    margin-right: 8%;
+}
+.search-table input{
+    background: transparent;
+    border: none;
+    border-bottom: 0.5px solid var(--color-azulClaro);
+    width: 7rem;
+}
+table {
+    margin-top: 3px;
+    width: 100%;
+    border-collapse: collapse;
+    border-spacing: 5px;
+    text-align: center;
+}
+.products-table{
+    overflow-x:auto;
+}
+table th{
+    border-bottom: 1px solid var(--color-azulClaro);
+    height: 40px;
+    padding: 2px;
+}
+table td{
+    padding: 2px;
+} 
+tr:hover {
+    background-color: #f5f5f5;
+}
+table img{
+    width: 40px;
+    height: auto;
+}
+table td button{
+    background-color: transparent;
+    color: var(--color-azulOscuro);
+    border: none;
 }
 section.product-form{
     background-color: var(--color-azulClaro);
     color: white;
     text-align: center;
+    margin: 1rem;
+    width: fit-content;
+    height: 33rem;
+    padding: 1rem;
+    border: 1px solid var(--color-violeta);
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 .add-btn{
     width: 100%;
@@ -35,33 +127,43 @@ form#product{
 form#product fieldset{
     border: none;
 }
+form#product input#image{
+    background-color: transparent;
+    border: none;
+    color: var(--color-violeta);
+}
 form#product fieldset input{
     background-color: transparent;
     border: none;
     border-bottom: 1px solid var(--color-azulOscuro);
 }
-section.product-list{
-    background-image: url(../images/Diseño\ y\ Logo/Logo\ para\ fondos\ oscuros.png);
-    background-size: contain;
-    background-repeat: no-repeat;
+form#product fieldset input.delete{
+    background-color: white;
+    border-radius: 2.3rem;
+    width: 50px;
+}
+form#product fieldset input.display-shop{
+    margin-left: 4px;
+    background-color: var(--color-violeta);
 }
 
-section .belluser{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
-    padding: 2px;
+@media (min-width: 515px) {
+    table {
+        border-spacing: 7px;
+        text-align: left;
+    }
+    table img{
+        width: 25%;
+        height: auto;
+    }
 }
-section .belluser a i{
-    font-size: 1.4rem;
-}
-table img{
-    width: 14%;
-    height: auto;
-}
-@media (min-width: 518px) {
-    main{
-        flex-direction: row;
+@media (min-width: 768px ){
+    table {
+        border-spacing: 0px;
+        text-align: left;
+    }
+    table img{
+        width: 18%;
+        height: auto;
     }
 }
