--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -42,95 +42,23 @@
     </div></a>
   </header>
   <main>
-    <section class="product-form">
-      <div class="add-btn"><input type="button" value="Agregar libro"></div>
-      <div class="errors">
-        <ul>
-          
-        </ul>
-      </div>
-      <form method="POST" enctype="multipart/form-data" id="product">
-        <fieldset>
-          <label for="image">Imagen :</label>
-          <input type="file" name="image" id="image" accept=".jpg, .png, .sgv" multiple/>
-        </fieldset>
-        <fieldset>
-          <label for="name">Título :</label>
-          <input
-            type="text"
-            name="title"
-            id="title"
-            sentence
-            value=""
-          />
-        </fieldset>
-        <fieldset>
-          <label for="name">Autor :</label>
-          <input
-            type="text"
-            name="name"
-            id="name"
-            sentence
-            value=""
-          />
-        </fieldset>
-        <fieldset>
-          <label for="amount">Cantidad :</label>
-          <input
-          type="button"
-          name="amount"
-          id="amount"
-          value="+"
-          />
-          <input
-          type="number"
-          name="amount"
-          id="amount"
-          value=""
-          />
-          <input
-          type="button"
-          name="amount"
-          id="amount"
-          value="-"
-          />
-        </fieldset>
-        <fieldset>
-          <label for="price">Precio :</label>
-          <input
-            type="text"
-            id="price"
-            name="price"
-            value=""
-          />
-        </fieldset>
-        <fieldset>
-          <label for="description">Descripción :</label>
-          <input
-            type="textarea"
-            name="description"
-            id="description"
-            sentence
-            value=""
-          />
-        </fieldset>
-        <fieldset>
-          <input type="reset" value="Borrar">
-          <input type="submit" value="Guardar">
-        </fieldset>
-      </form>
-    </section>
+    <!--LIST OF PRODUCTS SECTION-->
     <section class="product-list">
+      <!--LINKS TO Agregar libro, Bell AND user-->
       <div class="belluser">
-        <a href="/login"><div class="">
-          <i class="far fa-bell" id="icon"></i>
-        </div></a>
-        <a href="/login"><div class="">
-          <i class="far fa-user" id="icon"></i>
-        </div></a>
+        <a href="#shop-form" class="display-shop">Agregar libro</a>
+        <a href="/login">
+          <div class="">
+            <i class="far fa-bell" id="icon"></i>
+          </div>
+        </a>
+        <a href="/login">
+          <div class="">
+            <i class="far fa-user" id="icon"></i>
+          </div>
+        </a>
       </div>
-      <hr>
-      <div class="">
+      <div class="search-table">
         <h2>Libros</h2>
         <label name="search" id="search" >
           <i class="fas fa-search "></i>
@@ -140,7 +68,7 @@
       <div class="products-table">
         <table>
           <thead>
-            <tr>
+            <tr class="head-table">
               <th><input type="checkbox"></th>
               <th>Imagen</th>
               <th>Título</th>
@@ -148,8 +76,8 @@
               <th>Cantidad</th>
               <th>Precio</th>
               <th>Estado</th>
-              <th></th>
-              <th></th>
+              <th> </th>
+              <th> </th>
             </tr>
           </thead> 
           <tbody>
@@ -204,6 +132,85 @@
             </tbody>
         </table>
       </div>
+    </section>
+<!-- FORM -->
+    <section class="product-form">
+      <div class="add-btn"><h2 id="shop-form">Agregar libro</h2></div>
+      <div class="errors">
+        <ul>
+          
+        </ul>
+      </div>
+      <form method="POST" enctype="multipart/form-data" id="product">
+        <fieldset>
+          <label for="image">Imagen :</label>
+          <input type="file" name="image" id="image" accept=".jpg, .png, .sgv" multiple/>
+        </fieldset>
+        <fieldset>
+          <label for="name">Título :</label>
+          <input
+            type="text"
+            name="title"
+            id="title"
+            sentence
+            value=""
+          />
+        </fieldset>
+        <fieldset>
+          <label for="name">Autor :</label>
+          <input
+            type="text"
+            name="name"
+            id="name"
+            sentence
+            value=""
+          />
+        </fieldset>
+        <fieldset>
+          <label for="amount">Cantidad :</label>
+          <input
+          type="button"
+          name="amount"
+          id="amount"
+          value="-"
+          />
+          <input
+          type="number"
+          name="amount"
+          id="amount"
+          value=""
+          />
+          <input
+          type="button"
+          name="amount"
+          id="amount"
+          value="+"
+          />
+        </fieldset>
+        <fieldset>
+          <label for="price">Precio :</label>
+          <input
+            type="text"
+            id="price"
+            name="price"
+            value=""
+          />
+        </fieldset>
+        <fieldset>
+          <label for="description">Descripción :</label>
+          <input
+            type="textarea"
+            name="description"
+            id="description"
+            sentence
+            value=""
+          />
+        </fieldset>
+        <fieldset>
+          <input class="delete" type="reset" value="Borrar">
+          <input class="display-shop" type="submit" value="Guardar">
+        </fieldset>
+      </form>
     </section>
   </main>
 </body>
