--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -12,6 +12,10 @@ section.product-list{
 
 section .belluser{
     display: flex;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0px;
+    background: var(--color-beige);
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
@@ -85,20 +89,32 @@ table td button{
     border: none;
 }
 section.product-form{
-    background-color: var(--color-azulClaro);
-    color: white;
-    text-align: center;
-    margin: 1rem;
-    padding: 1rem;
-    width: fit-content;
-    height: 33rem;
-    border: 1px solid var(--color-violeta);
-    border-radius: 12px;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    position: absolute;
+    top: 0;
     display: flex;
     align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    display: none;
+}
+.internal-modal {
+    padding: 20px;
+    background-color: var(--color-azulClaro);
+    color: white;
+    margin: 1rem;
+    width: fit-content;
+    height: 33rem;
+    border-radius: 10px;
+    border: 1px solid var(--color-violeta);
+    display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-}
+    text-align: center;
+    position: relative;
+  }
 .add-btn{
     width: 100%;
     height: 3rem;
@@ -145,6 +161,14 @@ form#product fieldset input.delete{
 form#product fieldset input.display-shop{
     margin-left: 4px;
     background-color: var(--color-violeta);
+}
+/* MODALES CSS */
+  .close-create {
+    position: absolute;
+    top: 4px;
+    right: 14px;
+    font-size: 30px;
+    cursor: pointer;
 }
 
 @media (min-width: 515px) {
