--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -46,7 +46,7 @@
     <section class="product-list">
       <!--LINKS TO Agregar libro, Bell AND user-->
       <div class="belluser">
-        <a href="#shop-form" class="display-shop">Agregar libro</a>
+        <a href="#" class="display-shop" id="button-create">Agregar libro</a>
         <a href="/login">
           <div class="">
             <i class="far fa-bell" id="icon"></i>
@@ -135,83 +135,89 @@
     </section>
 <!-- FORM -->
     <section class="product-form">
-      <div class="add-btn"><h2 id="shop-form">Agregar libro</h2></div>
-      <div class="errors">
-        <ul>
+      <div class="internal-modal">
+        <div class="close-create">
+          <i class="fas fa-times" id="icon" aria-hidden="true"></i>
+        </div>
+        <div class="add-btn"><h2 id="shop-form">Agregar libro</h2></div>
+        <div class="errors">
+          <ul>
           
-        </ul>
+          </ul>
+        </div>
+        <form method="POST" enctype="multipart/form-data" id="product">
+          <fieldset>
+            <label for="image">Imagen :</label>
+            <input type="file" name="image" id="image" accept=".jpg, .png, .sgv" multiple/>
+          </fieldset>
+          <fieldset>
+            <label for="name">Título :</label>
+            <input
+              type="text"
+              name="title"
+              id="title"
+              sentence
+              value=""
+            />
+          </fieldset>
+          <fieldset>
+            <label for="name">Autor :</label>
+            <input
+              type="text"
+              name="name"
+              id="name"
+              sentence
+              value=""
+            />
+          </fieldset>
+          <fieldset>
+            <label for="amount">Cantidad :</label>
+            <input
+              type="button"
+              name="amount"
+              id="amount"
+              value="-"
+            />
+            <input
+              type="number"
+              name="amount"
+              id="amount"
+              value=""
+            />
+            <input
+              type="button"
+              name="amount"
+              id="amount"
+              value="+"
+            />
+          </fieldset>
+          <fieldset>
+            <label for="price">Precio :</label>
+            <input
+                type="text"
+                id="price"
+                name="price"
+                value=""
+            />
+          </fieldset>
+          <fieldset>
+            <label for="description">Descripción :</label>
+            <input
+              type="textarea"
+              name="description"
+              id="description"
+              sentence
+              value=""
+            />
+          </fieldset>
+          <fieldset>
+            <input class="delete" type="reset" value="Borrar">
+            <input class="display-shop" type="submit" value="Guardar">
+          </fieldset>
+        </form>
       </div>
-      <form method="POST" enctype="multipart/form-data" id="product">
-        <fieldset>
-          <label for="image">Imagen :</label>
-          <input type="file" name="image" id="image" accept=".jpg, .png, .sgv" multiple/>
-        </fieldset>
-        <fieldset>
-          <label for="name">Título :</label>
-          <input
-            type="text"
-            name="title"
-            id="title"
-            sentence
-            value=""
-          />
-        </fieldset>
-        <fieldset>
-          <label for="name">Autor :</label>
-          <input
-            type="text"
-            name="name"
-            id="name"
-            sentence
-            value=""
-          />
-        </fieldset>
-        <fieldset>
-          <label for="amount">Cantidad :</label>
-          <input
-          type="button"
-          name="amount"
-          id="amount"
-          value="-"
-          />
-          <input
-          type="number"
-          name="amount"
-          id="amount"
-          value=""
-          />
-          <input
-          type="button"
-          name="amount"
-          id="amount"
-          value="+"
-          />
-        </fieldset>
-        <fieldset>
-          <label for="price">Precio :</label>
-          <input
-            type="text"
-            id="price"
-            name="price"
-            value=""
-          />
-        </fieldset>
-        <fieldset>
-          <label for="description">Descripción :</label>
-          <input
-            type="textarea"
-            name="description"
-            id="description"
-            sentence
-            value=""
-          />
-        </fieldset>
-        <fieldset>
-          <input class="delete" type="reset" value="Borrar">
-          <input class="display-shop" type="submit" value="Guardar">
-        </fieldset>
-      </form>
     </section>
   </main>
+  <script src="js/admin.js"></script>
 </body>
 </html>
