--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -1,108 +1,116 @@
 @import url(variables.css);
 
-
 .header {
-    position: relative;
-    width: 100%;
-    min-width: 320px;
-    height: 10vh;
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
-    justify-content: space-around;
-    background-color: var(--color-azulOscuro);
-  }
-  .logo__link {
-    font-size: var(--title);
-    color: var(--color-beige);
-    font-family: var(--font-berkshire);
-    letter-spacing: 0.2rem;
-  }
+  position: relative;
+  width: 100%;
+  min-width: 320px;
+  height: 10vh;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-around;
+  background-color: var(--color-azulOscuro);
+}
+.logo__link {
+  font-size: var(--title);
+  color: var(--color-beige);
+  font-family: var(--font-berkshire);
+  letter-spacing: 0.2rem;
+}
+.btn {
+  text-align: end;
+  font-size: var(--icon);
+  color: var(--color-beige);
+  cursor: pointer;
+}
+.nav {
+  position: absolute;
+  top: 10vh;
+  right: 0;
+  background: var(--color-beige);
+  height: 90vh;
+  width: 100%;
+  flex-direction: column;
+  clip-path: inset(50% 0 50% 0);
+  -webkit-clip-path: inset(50% 0 50% 0);
+  transition: all 2s ease-out;
+  z-index: 9000;
+  overflow-x: hidden;
+}
+.nav::after {
+  content: "";
+  display: block;
+  width: 50%;
+  height: 5px;
+  background-color: var(--color-azulOscuro);
+  position: absolute;
+  top: 99%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.nav.open {
+  clip-path: inset(0 0 0 0);
+  -webkit-clip-path: inset(0 0 0 0);
+  pointer-events: all;
+}
+.menu {
+  height: 80vh;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: space-around;
+}
+.menu__items {
+  height: 40px;
+}
+.menu__link {
+  font-size: var(--paragraph);
+  color: var(--color-azulOscuro);
+  letter-spacing: 0.5px;
+  cursor: pointer;
+}
+.menu__link:hover {
+  text-decoration: underline;
+}
+.login {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.login__btn {
+  border: none;
+  font-size: var(--btn);
+  letter-spacing: 0.1rem;
+  color: var(--color-azulOscuro);
+  cursor: pointer;
+}
+.login__btn:hover {
+  text-decoration: underline;
+}
+
+/* MENU DESKTOP */
+.user__desk {
+  display: none;
+}
+
+.nav__desk {
+  display: none;
+}
+
+/*  Media Queries */
+
+/* Descktop */
+
+@media (min-width: 768px) {
+  /* SE SACA EL MENU VERSION MOBILE Y TABLET */
   .btn {
-    text-align: end;
-    font-size: var(--icon);
-    color: var(--color-beige);
-    cursor: pointer;
+    display: none;
   }
   .nav {
-    position: absolute;
-    top: 10vh;
-    right: 0;
-    background:var(--color-beige);
-    height: 90vh;
-    width: 100%;
-    flex-direction: column;
-    clip-path: inset(50% 0 50% 0);
-    -webkit-clip-path: inset(50%  0 50% 0);
-    transition: all 2s ease-out;
-    z-index: 9000;
-  }
-  .nav.open {
-    clip-path: inset(0 0 0 0);
-    -webkit-clip-path: inset(0 0  0 0);
-    pointer-events: all;
-  
-  }
-  .menu {
-    height: 80vh;
-    display: flex;
-    flex-flow: column nowrap;
-    align-items: center;
-    justify-content: space-around;
-  }
-  .menu__items{
-    height: 40px;
-  }
-  .menu__link{
-      font-size: var(--paragraph);
-      color: var(--color-azulOscuro);
-      letter-spacing: 0.5px;
-      cursor: pointer;
-  }
-  .menu__link:hover{
-    text-decoration: underline;
-  }
-  .login{
-      display: flex;
-      align-items: center;
-      justify-content: space-around;
-  }
-  .login__btn{
-      border: none;
-      font-size: var(--btn);
-      letter-spacing: 0.1rem;
-      color: var(--color-azulOscuro);
-      cursor: pointer;
-  }
-  .login__btn:hover{
-    text-decoration: underline;
-  }
-
-  /* MENU DESKTOP */
-  .user__desk {
     display: none;
   }
 
-   .nav__desk {
-     display: none;
-   }
-
-
-  /*  Media Queries */
-
-  /* Descktop */
-
-  @media (min-width:768px ) {
-    
-    /* SE SACA EL MENU VERSION MOBILE Y TABLET */
-    .btn {
-      display: none;
-    }
-    .nav {
-      display: none;
-    }
-
-    /* SE ORIENTA EL LOGO AL CENTRO */
+  /* SE ORIENTA EL LOGO AL CENTRO */
 
   .header {
     padding: 10px 20px 8px;
@@ -116,24 +124,21 @@
   }
   .logo__link {
     font-size: 3rem;
-    
   }
 
-   /* LUPA, CARRITO Y MAGO DE USUARIO */
-  .user__desk{
+  /* LUPA, CARRITO Y MAGO DE USUARIO */
+  .user__desk {
     display: flex;
     justify-content: flex-end;
     width: 100%;
     padding-bottom: 5px;
     color: var(--color-beige);
-
   }
 
   .user__icon__desk {
     font-size: 1.2rem;
     color: var(--color-beige);
     padding-right: 1rem;
-
   }
 
   /* LUPA DE BUSQUEDA */
@@ -144,7 +149,6 @@
     width: 0;
     transition-property: width;
     transition-duration: 1s;
-
   }
 
   .user__search__desk:focus {
@@ -152,7 +156,6 @@
     outline: none;
     border-bottom: 1px solid var(--color-beige);
     width: 9rem;
-
   }
 
   /* MAGO PARA REGISTRARSE */
@@ -173,22 +176,20 @@
   }
 
   /* MENU POR DEBAJO DEL HEADER */
-    .nav__desk {
-      color: var(--color-azulOscuro);
-      display: flex;
-      flex-direction: row;
-      height: fit-content ;
-      width: 100vw;
-      background-color: var(--color-beige);
-      box-shadow: var(--box-shadow-button);
-    }
-
-    .menu__desk {
-      font-size: 1rem;
-      display: flex;
-      justify-content: space-evenly;
-      width: 100%;
-    }
-
-   
+  .nav__desk {
+    color: var(--color-azulOscuro);
+    display: flex;
+    flex-direction: row;
+    height: fit-content;
+    width: 100vw;
+    background-color: var(--color-beige);
+    box-shadow: var(--box-shadow-button);
   }
+
+  .menu__desk {
+    font-size: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+  }
+}
